update variable: color, header-size

--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -34,35 +34,43 @@ $spacers: (
 );
 
 //
-$h1: $spacer*48;      //48px
-$h2: $spacer*32;      //32px
-$h3: $spacer*28;      //27px
-$h4: $spacer*22;      //21px
-$h5: $spacer*18;      //18px
-$h6: $spacer*16;      //16px
+$h1:                          $spacer*32; //32px
+$h2:                          $spacer*22; //22px
+$h3:                          $spacer*18; //18px
+$h4:                          $spacer*16; //16px
+$h5:                          $spacer*14; //14px
 
 //
-$h1-m: $spacer*48;    //48px
-$h2-m: $spacer*32;    //32px
-$h3-m: $spacer*27;    //27px
-$h4-m: $spacer*22;    //21px
-$h5-m: $spacer*18;    //18px
-$h6-m: $spacer*16;    //16px
+$h1-m:                        $spacer*28; //28px
+$h2-m:                        $spacer*20; //20px
+$h3-m:                        $spacer*18; //18px
+$h4-m:                        $spacer*16; //16px
+$h5-m:                        $spacer*14; //14px
+
+$gray-100:                  #EEEEEE !default;
+$gray-200:                  #D3D5D7 !default;
+$gray-300:                  #939EA7 !default; //secondary
+$gray-400:                  #6B7780 !default;
+$gray-500:                  #48545D !default; //secondary-variant
 
 //
-$white:         #fff !default; //background
-$gray-100:      #EEEEEE !default;
-$gray-200:      #D9D9D9 !default;
-$gray-300:      #7F7F7F !default;
-$gray-400:      #393939 !default;
-$gray-500:      #2C2C2C !default;
-$black:         #000 !default;
+$red-100:                   #FEEBEC !default;
+$red-200:                   #EE969B !default;
+$red-300:                   #D60C18 !default; //primary
+$red-400:                   #BE0B15 !default;
+$red-500:                   #9D0505 !default; //primary-variant
 
 //
-$facebook:      #1877f2 !default;
-$line:          #00c200 !default;
-$instagram:     #dd2a7b !default;
-$weibo:         #e6162d !default;
-$rss:           #ff5700 !default;
-$twitter:       #00acee !default;
-$whatapp:       #4fce5d !default;
+$white:                     #ffffff !default; //background
+$gray:                      #fafafa !default;
+$black:                     #171717 !default;
+$dark:                      #394148 !default;
+
+//
+$facebook:                  #1877f2 !default;
+$line:                      #00c200 !default;
+$instagram:                 #dd2a7b !default;
+$weibo:                     #e6162d !default;
+$rss:                       #ff5700 !default;
+$twitter:                   #00acee !default;
+$whatapp:                   #4fce5d !default;
