--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -41,4 +41,29 @@ textarea {
   height: 0 !important;
   font-size: 0 !important;
 }
+
+.hamburger {
+  position: relative;
+  width: 40px;
+  padding: 10px;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.hamburger span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #48545D;
+}
+
+.hamburger span + span {
+  margin-top: 4px;
+}
+
+.active.hamburger span,
+:hover.hamburger span {
+  background-color: #171717;
+}
 /*# sourceMappingURL=cw.css.map */
