--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -29,26 +29,30 @@ $container-max-widths: (
 // 間距設定
 $spacer:  0.0625rem; //1px
 $spacers: (
-  "0": 0px,
-  "10": 10px,
-  "15": 15px,
-  "20": 20px,
-  "30": 30px,
+  "0":  $spacer * 0,
+  "10": $spacer * 10,
+  "15": $spacer * 15,
+  "20": $spacer * 20,
+  "30": $spacer * 30,
   "auto": auto,
 );
 
-// header text 設定
-$h1:    $spacer*32; //32px
-$h2:    $spacer*22; //22px
-$h3:    $spacer*18; //18px
-$h4:    $spacer*16; //16px
-$h5:    $spacer*14; //14px
+// ---------------------------------------------------------
 
-$h1-m:  $spacer*28; //28px
-$h2-m:  $spacer*20; //20px
-$h3-m:  $spacer*18; //18px
-$h4-m:  $spacer*16; //16px
-$h5-m:  $spacer*14; //14px
+// header text 設定
+$h1:    $spacer * 32; //32px
+$h2:    $spacer * 22; //22px
+$h3:    $spacer * 18; //18px
+$h4:    $spacer * 16; //16px
+$h5:    $spacer * 14; //14px
+
+$h1-m:  $spacer * 28; //28px
+$h2-m:  $spacer * 20; //20px
+$h3-m:  $spacer * 18; //18px
+$h4-m:  $spacer * 16; //16px
+$h5-m:  $spacer * 14; //14px
+
+// ---------------------------------------------------------
 
 // 灰色階色碼
 $gray-100:         #EEEEEE !default;
@@ -130,3 +134,72 @@ $cw-colors: map-merge((
   "error":              ($error,              $white),
   "background":         ($background,         $white)
 ), $cw-colors);
+
+// ---------------------------------------------------------
+
+$icomoon-font-family:       "cw_icon" !default;
+$icomoon-font-path:         "../fonts" !default;
+
+$icon-search:               "\e917";
+$icon-check-circle:         "\e90d";
+$icon-exclamation-circle:   "\e90f";
+$icon-question-circle:      "\e90e";
+$icon-check-solid:          "\e92a";
+$icon-exclamation-solid:    "\e93a";
+$icon-error-solid:          "\e935";
+$icon-eyeoff:               "\e90b";
+$icon-eyeon:                "\e90c";
+$icon-sort:                 "\e910";
+$icon-caret-down:           "\e911";
+$icon-caret-up:             "\e912";
+$icon-caret-right:          "\e927";
+$icon-caret-left:           "\e928";
+$icon-left:                 "\e91e";
+$icon-right:                "\e91f";
+$icon-down:                 "\e920";
+$icon-up:                   "\e922";
+$icon-arrow-right:          "\e933";
+$icon-arrow-left:           "\e934";
+$icon-check:                "\e929";
+$icon-cancel:               "\e92e";
+$icon-minus:                "\e938";
+$icon-plus:                 "\e939";
+$icon-facebook:             "\e91a";
+$icon-fb:                   "\e91a";
+$icon-instagram:            "\e91b";
+$icon-line:                 "\e91c";
+$icon-twitter:              "\e900";
+$icon-rss:                  "\e921";
+$icon-apple:                "\e901";
+$icon-security:             "\e944";
+$icon-pushpin:              "\e945";
+$icon-pen:                  "\e904";
+$icon-mailing:              "\e903";
+$icon-link:                 "\e902";
+$icon-bookmark-filled:      "\e932";
+$icon-bookmark-outlined:    "\e923";
+$icon-mail-filled:          "\e947";
+$icon-mail:                 "\e925";
+$icon-coin:                 "\e92f";
+$icon-fontsize:             "\e930";
+$icon-download-pdf:         "\e949";
+$icon-zoom:                 "\e94a";
+$icon-note:                 "\e94b";
+$icon-volume:               "\e94c";
+$icon-play-solid:           "\e94d";
+$icon-headphones:           "\e94e";
+$icon-pause-solid:          "\e94f";
+$icon-user-filled:          "\e918";
+$icon-user-outlined:        "\e919";
+$icon-play:                 "\e91d";
+$icon-lock:                 "\e936";
+$icon-download:             "\e937";
+$icon-internet:             "\e93b";
+$icon-member-notification:  "\e93c";
+$icon-member-download:      "\e93d";
+$icon-member-invite:        "\e93e";
+$icon-member-lecture:       "\e93f";
+$icon-benefits:             "\e940";
+$icon-coupon:               "\e941";
+$icon-gift:                 "\e942";
+$icon-member-only:          "\e943";
