--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -361,11 +361,6 @@ textarea {
 }
 
 .tab .tab__nav ul li {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 0%;
-          flex: 1 0 0%;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
   padding: 0 20px;
   font-size: 1rem;
   line-height: 3.1875;
@@ -374,8 +369,19 @@ textarea {
   cursor: pointer;
 }
 
+@media (min-width: 414px) {
+  .tab .tab__nav ul li {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 0%;
+            flex: 1 0 0%;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
+
 @media (min-width: 1024px) {
   .tab .tab__nav ul li {
+    min-width: 8.75rem;
     -webkit-transition: color 0.3s;
     transition: color 0.3s;
   }
