--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -45,12 +45,14 @@ $h2:    $spacer * 22; //22px
 $h3:    $spacer * 18; //18px
 $h4:    $spacer * 16; //16px
 $h5:    $spacer * 14; //14px
+$h6:    $spacer * 12; //12px
 
 $h1-m:  $spacer * 28; //28px
 $h2-m:  $spacer * 20; //20px
 $h3-m:  $spacer * 18; //18px
 $h4-m:  $spacer * 16; //16px
 $h5-m:  $spacer * 14; //14px
+$h6-m:  $spacer * 12; //12px
 
 // ---------------------------------------------------------
 
