--- a/assets/sass/cw.scss
+++ b/assets/sass/cw.scss
@@ -2,7 +2,13 @@
 
 @import "common";
 
+@import "typography";
+
 @import "iconography/font";
 @import "iconography/hamburger";
+
+@import "header";
+@import "logo";
+@import "footer";
 
 @import "tab";
