--- a/assets/css/cw.css
+++ b/assets/css/cw.css
@@ -11,6 +11,19 @@
   outline: 0;
 }
 
+html, body {
+  height: 100%;
+  line-height: 1.25;
+}
+
+.footer--complete main {
+  min-height: calc(100% - 472px);
+}
+
+.footer--simple main {
+  min-height: calc(100% - 100px);
+}
+
 a, button {
   text-decoration: none;
 }
@@ -41,6 +54,124 @@ textarea {
   width: 0 !important;
   height: 0 !important;
   font-size: 0 !important;
+}
+
+h1,
+.h1, h2,
+.h2, h3,
+.h3, h4,
+.h4, h5,
+.h5, h6,
+.h6 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+  }
+}
+
+h1 .heading__icon, .h1 .heading__icon, h2 .heading__icon, .h2 .heading__icon, h3 .heading__icon, .h3 .heading__icon, h4 .heading__icon, .h4 .heading__icon, h5 .heading__icon, .h5 .heading__icon, h6 .heading__icon, .h6 .heading__icon {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 0.9em;
+  vertical-align: middle;
+}
+
+h1 .heading__icon--correct, .h1 .heading__icon--correct, h2 .heading__icon--correct, .h2 .heading__icon--correct, h3 .heading__icon--correct, .h3 .heading__icon--correct, h4 .heading__icon--correct, .h4 .heading__icon--correct, h5 .heading__icon--correct, .h5 .heading__icon--correct, h6 .heading__icon--correct, .h6 .heading__icon--correct {
+  color: #003a9f;
+}
+
+h1 .heading__icon--notice, .h1 .heading__icon--notice, h2 .heading__icon--notice, .h2 .heading__icon--notice, h3 .heading__icon--notice, .h3 .heading__icon--notice, h4 .heading__icon--notice, .h4 .heading__icon--notice, h5 .heading__icon--notice, .h5 .heading__icon--notice, h6 .heading__icon--notice, .h6 .heading__icon--notice {
+  color: #D60C18;
+}
+
+h1 .heading__icon--error, .h1 .heading__icon--error, h2 .heading__icon--error, .h2 .heading__icon--error, h3 .heading__icon--error, .h3 .heading__icon--error, h4 .heading__icon--error, .h4 .heading__icon--error, h5 .heading__icon--error, .h5 .heading__icon--error, h6 .heading__icon--error, .h6 .heading__icon--error {
+  color: #D60C18;
+}
+
+h1 .heading__text, .h1 .heading__text, h2 .heading__text, .h2 .heading__text, h3 .heading__text, .h3 .heading__text, h4 .heading__text, .h4 .heading__text, h5 .heading__text, .h5 .heading__text, h6 .heading__text, .h6 .heading__text {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 1.25;
+}
+
+h1,
+.h1 {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 768px) {
+  h1,
+  .h1 {
+    font-size: 2rem;
+  }
+}
+
+h2,
+.h2 {
+  font-size: 1.25rem;
+}
+
+@media (min-width: 768px) {
+  h2,
+  .h2 {
+    font-size: 1.375rem;
+  }
+}
+
+h3,
+.h3 {
+  font-size: 1.125rem;
+}
+
+@media (min-width: 768px) {
+  h3,
+  .h3 {
+    font-size: 1.125rem;
+  }
+}
+
+h4,
+.h4 {
+  font-size: 1rem;
+}
+
+@media (min-width: 768px) {
+  h4,
+  .h4 {
+    font-size: 1rem;
+  }
+}
+
+h5,
+.h5 {
+  font-size: 0.875rem;
+}
+
+@media (min-width: 768px) {
+  h5,
+  .h5 {
+    font-size: 0.875rem;
+  }
+}
+
+h6,
+.h6 {
+  font-size: 0.75rem;
+}
+
+@media (min-width: 768px) {
+  h6,
+  .h6 {
+    font-size: 0.75rem;
+  }
 }
 
 @font-face {
@@ -340,6 +471,72 @@ textarea {
 .active.hamburger span,
 :hover.hamburger span {
   background-color: #171717;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 60px;
+  border-bottom: 1px solid #EEEEEE;
+}
+
+.logo__set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo__set > a {
+  display: block;
+  -ms-flex-item-align: auto;
+      -ms-grid-row-align: auto;
+      align-self: auto;
+}
+
+.logo__set > a > img {
+  display: block;
+  width: auto;
+  height: auto;
+}
+
+.logo__set > a:first-child {
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo__set.logo__set--cw > a > img {
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .logo__set.logo__set--cw > a > img {
+    height: 30px;
+  }
+}
+
+a.logo {
+  display: block;
+  -ms-flex-item-align: auto;
+      -ms-grid-row-align: auto;
+      align-self: auto;
+}
+
+a.logo > img {
+  display: block;
+  width: 100px;
+  height: auto;
+}
+
+footer {
+  background-color: #EEEEEE;
 }
 
 .tab {
