--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -8,6 +8,20 @@
   }
 }
 
+html, body {
+  height: 100%;
+  line-height: 1.25;
+}
+
+main {
+  .footer--complete & {
+    min-height: calc(100% - 472px); // header height + footer height
+  }
+  .footer--simple & {
+    min-height: calc(100% - 100px); // header height + footer height
+  }
+}
+
 a, button {
   text-decoration: none;
   @media screen and (min-width: 1024px) {
