--- a/assets/sass/_import.scss
+++ b/assets/sass/_import.scss
@@ -1,4 +1,5 @@
-@import "variable";
-@import "utilities";
 @import "function";
+@import "variable";
+@import "color";
 @import "mixin";
+@import "utilities";
