--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&family=Noto+Serif+TC:wght@600&family=Roboto:wght@300;400;500;700&display=swap');
+
 * {
   box-sizing: border-box;
   outline: 0;
@@ -10,21 +12,34 @@
 
 html, body {
   height: 100%;
-  line-height: 1.25;
+}
+
+body {
+  font-family: 'Roboto', 'Noto Sans TC', sans-serif;
+  line-height: 1.5;
+  @include media-breakpoint-up(md) {
+    font-weight: 300;
+  }
+}
+
+.serif {
+  font-family: 'Noto Serif TC', serif;
+  font-weight: 600;
 }
 
 main {
+  min-height: calc(100% - 104px); // header height + footer height
   .footer--complete & {
-    min-height: calc(100% - 472px); // header height + footer height
+    min-height: calc(100% - 476px); // header height + footer height
   }
   .footer--simple & {
-    min-height: calc(100% - 100px); // header height + footer height
+    min-height: calc(100% - 104px); // header height + footer height
   }
 }
 
 a, button {
   text-decoration: none;
-  @media screen and (min-width: 1024px) {
+  @include media-breakpoint-up(md) {
     transition: color 0.3s, background 0.3s, border-color 0.3s;
   }
 }
