--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -5,6 +5,96 @@
 @import "space";
 
 main {
-  @include media-breakpoint-down(lg) {
+  display: flex;
+  > .container {
+    position: relative;
+    &::before {
+      @include beforeafter('', block);
+      position: absolute;
+      right: 100%;
+      width: 50%;
+      height: 100%;
+      background-color: $gray;
+    }
+    > .row {
+      min-height: 100%;
+      > article {
+        > section {
+          @include media-breakpoint-up(md) {
+            padding-left: 100px;
+          }
+          &:first-child {
+            padding-top: 40px;
+            padding-bottom: 40px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@mixin navi-with-arrow {
+  > li {
+    > a,
+    > span {
+      cursor: pointer;
+      &::before {
+        @include beforeafter($icon-right, block);
+        margin-right: 10px;
+        font-family: "#{$icomoon-font-family}";
+        transition: transform 0.3s;
+        transform: scale(0.784);
+      }
+    }
+    &.opened {
+      > a,
+      > span {
+        &::before {
+          transform: scale(0.784) rotate(90deg);
+        }
+      }
+      > ul {
+        display: block;
+      }
+    }
+  }
+}
+
+aside {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+  background-color: $gray;
+  ul {
+    margin: 0;
+    list-style: none;
+    &.ul--slide {
+      @include navi-with-arrow;
+    }
+  }
+  > ul {
+    padding-left: 0;
+    width: 100%;
+    @include media-breakpoint-up(md) {
+      max-width: 250px;
+    }
+    ul {
+      display: none;
+      width: 100%;
+    }
+    a, span {
+      display: inline-flex;
+      align-items: center;
+      flex-wrap: wrap;
+      padding: 5px 10px;
+      color: $black;
+      font-size: $h5;
+      &:hover {
+        background-color: $gray-100;
+      }
+      &.active {
+        color: $primary;
+      }
+    }
   }
 }
