--- a/assets/css/system.css
+++ b/assets/css/system.css
@@ -415,6 +415,10 @@ main > .container > .row > article > section:first-child {
   padding-bottom: 40px;
 }
 
+main > .container > .row > article > section:last-child {
+  padding-bottom: 40px;
+}
+
 aside {
   padding-top: 40px;
   padding-bottom: 40px;
