--- a/assets/sass/system.scss
+++ b/assets/sass/system.scss
@@ -28,6 +28,9 @@ main {
             padding-top: 40px;
             padding-bottom: 40px;
           }
+          &:last-child {
+            padding-bottom: 40px;
+          }
         }
       }
     }
